refactor: streamline EquipmentServiceImpl by extracting parameter difference logic and improving list handling